overflow issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   padding: 10px;
   position: relative;
   overflow: hidden;
+  box-sizing: border-box;
 }
 
 .App h1 {
